# bugbountyhunter

./: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  zeabur.yaml
agents/: _scraping_backend.py  analyst.py  patcher.py  pr_opener.py  scraper.py  security_analyst.py  verifier.py
config/: mocks.py  repos.yaml  settings.py
docs/superpowers/plans/: 2026-05-16-bounty-hunter.md
docs/superpowers/specs/: 2026-05-16-bounty-hunter-design.md
orchestrator/: engine.py  memory.py
router/: llm.py
sandbox/: runner.py
terminal/: server.py
terminal/static/: index.html
tests/: conftest.py  test_analyst.py  test_config.py  test_engine.py  test_llm_router.py  test_memory.py  test_patcher.py  test_pipeline.py  test_pr_opener.py  test_sandbox.py  test_scraper.py  test_scraping_backend.py  test_security_analyst.py  test_terminal.py  test_verifier.py
