[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bounty-hunter"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sse-starlette>=1.8.2",
    "httpx>=0.27.0",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
    "gitpython>=3.1.43",
    "PyGitHub>=2.3.0",
    "openai>=1.30.0",
    "pyyaml>=6.0.1",
    "scrapling[fetchers]>=0.4.8",
    # agentfield: install manually once SDK package name is confirmed from hackathon docs
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "pytest-asyncio>=0.23.7", "respx>=0.21.1"]

[tool.hatch.build.targets.wheel]
packages = ["agents", "orchestrator", "router", "terminal", "sandbox", "config"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
